--- a/.github/workflows/rada-monitor.yml
+++ b/.github/workflows/rada-monitor.yml
@@ -3,7 +3,7 @@ name: Rada Monitor
 on:
   schedule:
     # запуск каждый час (UTC)
-    - cron: "*/2 * * * *"
+    - cron: '*/10 * * * *'
   # возможность запустить руками с кнопки "Run workflow"
   workflow_dispatch:
 permissions:
