--- a/.github/workflows/rada-monitor.yml
+++ b/.github/workflows/rada-monitor.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # запуск каждый час (UTC)
     - cron: '*/10 * * * *'
+  workflow_dispatch:
 permissions:
   contents: write 
 
